--- a/LeetCode刷题/代码随想录/数组.md
+++ b/LeetCode刷题/代码随想录/数组.md
@@ -41,9 +41,9 @@ int[][] arr2 = new int[n][m];
 在一个有序数组上的二分查找可以分为4中情况：
 
 - 寻找**大于等于** $x$ 的第一个数
-- 寻找**大于** $x$ 的第一个数        （用大于等于实现：$\ge (x + 1)$ )
-- 寻找**大于等于** $x$ 的最后一个数	 （用大于等于实现：$(\ge (x + 1)) - 1$)
-- 寻找**小于 **$x$ 的最后一个数	 （用大于等于实现：$(\ge x) - 1$)
+- 寻找**大于** $x$ 的第一个数        （用大于等于实现：$\ge (x + 1)$  )
+- 寻找**大于等于** $x$ 的最后一个数	 （用大于等于实现：$(\ge (x + 1)) - 1$ )
+- 寻找**小于 ** $x$ 的最后一个数	 （用大于等于实现：$(\ge x) - 1$ )
 
 在我看来，二分查找其实就是两种情况，查找符合要求的最左边的数，和查找符合要求的最右边的数
 
@@ -71,7 +71,7 @@ class Solution {
 
 #### [35. 搜索插入位置](https://leetcode.cn/problems/search-insert-position/)
 
-左闭右开区间，查找大于等于 ![img](https://cdn.nlark.com/yuque/__latex/3537e05ea6c30169ac26f3217fa8afe9.svg) 的最左边的位置
+左闭右开区间，查找大于等于 $target$ 的最左边的位置
 
 ```java
 class Solution {
@@ -89,7 +89,7 @@ class Solution {
 
 #### [34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/)
 
-查找 ![img](https://cdn.nlark.com/yuque/__latex/3537e05ea6c30169ac26f3217fa8afe9.svg) 的第一个位置可以用 **左闭右开** 区间，而查找最后一个位置可以转化为 查找 ![img](https://cdn.nlark.com/yuque/__latex/c9daac8168b639111957ca65f2f4d602.svg)的第一个位置再减去![img](https://cdn.nlark.com/yuque/__latex/53072c2388d69edc65c2377681e4e87c.svg)。
+查找 $target$ 的第一个位置可以用 **左闭右开** 区间，而查找最后一个位置可以转化为查找 $target + 1$ 的第一个位置再减去 $1$ 。
 
 ```java
 class Solution {
@@ -119,8 +119,8 @@ class Solution {
 
 因为要求查找出来的平方根是算数平方根向下取整，所以情况分为以下两种
 
-- 如果![img](https://cdn.nlark.com/yuque/__latex/712ecf7894348e92d8779c3ee87eeeb0.svg)是完全平方数的话，那么二分查找到的中点 $mid$ 满足$mid * mid = x$
-- 如果![img](https://cdn.nlark.com/yuque/__latex/712ecf7894348e92d8779c3ee87eeeb0.svg)不是完全平方数的话，那么有 $mid * mid < x$
+- 如果 $x$ 是完全平方数的话，那么二分查找到的中点 $mid$ 满足$mid * mid = x$
+- 如果 $x$ 不是完全平方数的话，那么有 $mid * mid < x$
 
 所以可以知道对于真正的实数平方根 $\sqrt{x}$，我们要查找的是的 $\le \sqrt{x}$ 最大的整数
 
@@ -227,7 +227,7 @@ class Solution {
 
  把字符串删除后的结果加入到一个字符串数组中，比较两个结果字符串是否相等。
 
-时间复杂度：$O(n)$  
+时间复杂度：$O(n)$ 
 
 空间复杂度：$O(n)$ 
 
