--- a/LeetCode刷题/CodeTop/二叉树.md
+++ b/LeetCode刷题/CodeTop/二叉树.md
@@ -6,7 +6,7 @@
 
 设两个目标结点分别为 $p$ 和 $q$ 。对于二叉树中的任意一个结点 $root$ ，寻找 $p$ 和 $q$ 的公共祖先的结果有以下几种：
 
-1. $p$ ，$q$ 一个在 $root$ 的左子树中，一个在 $root$ 的右子树中。那么当前的 $root$ 就是二者的最近公共祖先
+1. $p$ , $q$ 一个在 $root$ 的左子树中，一个在 $root$ 的右子树中。那么当前的 $root$ 就是二者的最近公共祖先
 2. $p$ , $q$ 全部在 $root$ 的一个子树中（左子树或者右子树）。那么 $root.left$ 或者 $root.right$ 的返回值就是二者的公共祖先
 3. $p$ , $q$ 不在 $root$ 的子树中。返回 $null$
 
