代码随想录 update

--- a/LeetCode刷题/代码随想录/数组.md
+++ b/LeetCode刷题/代码随想录/数组.md
@@ -41,9 +41,9 @@ int[][] arr2 = new int[n][m];
 在一个有序数组上的二分查找可以分为4中情况：
 
 - 寻找**大于等于** $x$ 的第一个数
-- 寻找**大于** $x$ 的第一个数        （用大于等于实现：$\ge (x + 1)$  )
-- 寻找**大于等于** $x$ 的最后一个数	 （用大于等于实现：$(\ge (x + 1)) - 1$ )
-- 寻找**小于 ** $x$ 的最后一个数	 （用大于等于实现：$(\ge x) - 1$ )
+- 寻找**大于** $x$ 的第一个数        （用大于等于实现: $\ge (x + 1)$ )
+- 寻找**大于等于** $x$ 的最后一个数	 （用大于等于实现: $(\ge (x + 1)) - 1$ )
+- 寻找**小于 ** $x$ 的最后一个数	 （用大于等于实现: $(\ge x) - 1$ )
 
 在我看来，二分查找其实就是两种情况，查找符合要求的最左边的数，和查找符合要求的最右边的数
 
@@ -227,9 +227,9 @@ class Solution {
 
  把字符串删除后的结果加入到一个字符串数组中，比较两个结果字符串是否相等。
 
-时间复杂度：$O(n)$ 
+时间复杂度: $O(n)$ 
 
-空间复杂度：$O(n)$ 
+空间复杂度: $O(n)$ 
 
 ```java
 class Solution {
