--- a/LeetCode刷题/代码随想录/哈希表.md
+++ b/LeetCode刷题/代码随想录/哈希表.md
@@ -30,3 +30,61 @@ class Solution {
 }
 ```
 
+
+
+## [383. 赎金信](https://leetcode.cn/problems/ransom-note/)
+
+```java
+class Solution {
+    public boolean canConstruct(String ransomNote, String magazine) {
+        int[] cnt = new int[26];
+
+        for(var x : magazine.toCharArray()) {
+            cnt[x - 'a'] ++;
+        }
+
+        for(var x : ransomNote.toCharArray()) {
+            cnt[x - 'a'] --;
+            if(cnt[x - 'a'] < 0) {
+                return false;
+            }
+        }
+
+        return true;
+    }
+}
+```
+
+
+
+## [49. 字母异位词分组](https://leetcode.cn/problems/group-anagrams/)
+
+```java
+import java.util.*;
+
+class Solution {
+    public List<List<String>> groupAnagrams(String[] strs) {
+        Map<String, List<String>> collect = new HashMap<>();
+
+        for(String x : strs) {
+            char[] tempChar = x.toCharArray();
+            Arrays.sort(tempChar);
+            String temp = new String(tempChar);
+            
+            if(!collect.containsKey(temp)) {
+                collect.put(temp, new ArrayList<>());  
+            } 
+            collect.get(temp).add(x);
+        }
+
+        List<List<String>> ans = new ArrayList<>();
+
+        for(List<String> t : collect.values()) {
+            ans.add(t);
+        }
+
+        return ans;
+    }
+}
+```
+
