代码随想录/哈希表

--- a/LeetCode刷题/代码随想录/哈希表.md
+++ b/LeetCode刷题/代码随想录/哈希表.md
@@ -1,5 +1,13 @@
 # 哈希表
 
+## 哈希表理论基础
+
+​	**哈希表的目的是降低查找的时间复杂度**。例如如果一个任务的需求，需要我们在一个数组中反复查找某个给定的数 $x$ 出现了几次，那么可以开一个数组，以数组下标对应值 $x$ ，数组的值对应数出现的次数，这样就记录完了整个数组中各个数值出现的次数。
+
+​	在这上个例子的过程中，我们没有用到哈希函数，或者说哈希函数的映射就是自己。当我们要记录的值不是数字，而是字符，或者字符串的时候，我们就需要用到哈希函数了。比如有一个记录了所有同学名字（假设名字各不相同）的字符串数组，现在需要你将这些名字全部记录到哈希表中，此时我们就需要使用哈希函数进行映射，得到一个数值。
+
+​	但注意，哈希表的查找次数并不是每次都是 $1$ 次，因为不同的值可能被哈希函数映射到相同的数值上，即发生哈希碰撞。为了解决哈希碰撞（例如使用线性探测法、拉链法），会使得查找的次数变多。但是哈希表的平均时间复杂度并不直接依赖于数据大小，为 $O(1)$ 
+
 ## [242. 有效的字母异位词](https://leetcode.cn/problems/valid-anagram/)
 
 ```java
@@ -84,6 +92,127 @@ class Solution {
         }
 
         return ans;
+    }
+}
+```
+
+
+
+## [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)
+
+**定长滑动窗口+哈希表**
+
+**首先**我们需要知道，要怎么判断两个字符串是不是异位词呢？可以很容易的想到用两个哈希表，分别记录两个字符串中字母出现的次数，然后再比较两个哈希表中相同键对应的值是否相等。
+
+**第二个问题**是我们是否需要把，串 $s$ 中的每一个串都取出来，然后统计字母出现次数，再与串 $p$ 的字母出现次数进行比较的呢？答案是并不需要。可以使用滑动窗口来完成这个任务，我们需要维护一个长度为 $p.length()$ 的窗口，我们只统计落在窗口内的字母出现次数，在比较完是否为异位词后，窗口向后滑动一个位置，进入窗口的字母次数加 $1$，从窗口出去的字母次数减 $1$ 。
+
+```java
+import java.util.*;
+class Solution {
+    public List<Integer> findAnagrams(String s, String p) {
+        int[] cnts = new int[26];
+        int[] cntp = new int[26];
+        
+        int m = p.length();
+        for(int i = 0; i < m; i ++) {
+            cntp[p.charAt(i) - 'a'] ++;
+        }
+
+        List<Integer> ans = new ArrayList<>();
+        
+        for(int i = 0, j = 0; i < s.length(); i ++) {
+            cnts[s.charAt(i) - 'a'] ++;
+            if(i - j + 1 == m) {
+                if(check(cnts, cntp)) {
+                    ans.add(j);
+                }
+                cnts[s.charAt(j) - 'a'] --;
+                j ++;
+            }
+        }
+        return ans;
+    }
+
+    public boolean check(int[] cnts, int[] cntp) {
+        for(int i = 0; i < 26; i ++) {
+            if(cnts[i] != cntp[i]) {
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+
+
+## [349. 两个数组的交集](https://leetcode.cn/problems/intersection-of-two-arrays/)
+
+ 用一个哈希表记录一个数组中的内容，再检查另一个数组是否有，有的话就把相同的加入到一个 $set$ 集合中，最后使用
+
+```java
+set.stream().mapToInt(Integer::intValue).toArray()
+```
+
+把 $set$ 转化为 $int$ 数组
+
+```java
+import java.util.*;
+
+class Solution {
+    public int[] intersection(int[] nums1, int[] nums2) {
+        boolean[] cnt1 = new boolean[1001];
+        Set<Integer> set = new HashSet<>();
+
+        for(int x : nums1) {
+            cnt1[x] = true;
+        }        
+        for(int x : nums2) {
+            if(cnt1[x]) {
+                set.add(x);
+            }
+        }
+
+        int[] ans = set.stream().mapToInt(Integer::intValue).toArray();
+
+        return ans;
+    }
+}
+```
+
+
+
+## [350. 两个数组的交集 II](https://leetcode.cn/problems/intersection-of-two-arrays-ii/)
+
+用两个哈希表分别统计两个数组中数值出现的次数，比较两个哈希表每个数值出现的次数，如果在两个哈希表中数值 $x$ 出现次数都大于 $0$ ，则取两者出现次数的较小值作为次数记作 $times$ ，把 $x$ 加入答案 $times$ 次。
+
+```java
+import java.util.*;
+class Solution {
+    public int[] intersect(int[] nums1, int[] nums2) {
+        int[] cnt1 = new int[1001];
+        int[] cnt2 = new int[1001];
+
+        for(int x : nums1) {
+            cnt1[x] ++;
+        }
+        for(int x : nums2) {
+            cnt2[x] ++;
+        }
+
+        List<Integer> ans = new ArrayList<>();
+
+        for(int i = 0; i <= 1000; i ++) {
+            if(cnt1[i] != 0 && cnt2[i] != 0) {
+                int times = Math.min(cnt1[i], cnt2[i]);
+                for(int k = 0; k < times; k ++) {
+                    ans.add(i);
+                }        
+            }
+        }
+
+        return ans.stream().mapToInt(Integer::intValue).toArray();
+
     }
 }
 ```
