--- a/LeetCode刷题/代码随想录/哈希表.md
+++ b/LeetCode刷题/代码随想录/哈希表.md
@@ -217,3 +217,115 @@ class Solution {
 }
 ```
 
+## [202. 快乐数](https://leetcode.cn/problems/happy-number/)
+
+用一个哈希表存储达到过的值，判断在操作过程中有没有陷入到循环中
+
+```java
+import java.util.*;
+
+class Solution {
+    public boolean isHappy(int n) {
+        Set<Integer> set = new HashSet<>();
+        int m = n;
+
+        while(true) {
+            m = getsum(m);
+            if(m == 1) return true;
+            if(set.contains(m)) return false;
+
+            set.add(m);
+        }
+    }
+
+    int getsum(int m) {
+        int ans = 0;
+        while(m > 0) {
+            ans += (m % 10) * (m % 10);
+            m /= 10;
+        }
+        return ans;
+    }
+}
+```
+
+## [1. 两数之和](https://leetcode.cn/problems/two-sum/)
+
+枚举右，维护左
+
+```java
+import java.util.*;
+
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        Map<Integer, Integer> cnt = new HashMap<>();
+
+        for(int i = 0; i < nums.length; i ++) {
+            if(cnt.containsKey(target - nums[i])) {
+                return new int[]{cnt.get(target - nums[i]), i};
+            }
+            cnt.put(nums[i], i);
+        }
+
+        return new int[]{-1, -1};
+    }
+}
+```
+
+## [454. 四数相加 II](https://leetcode.cn/problems/4sum-ii/)
+
+先两重循环统计两个数的和记录，然后再遍历另外两个数组，看能不能得到哈希表中记录的相反数
+
+```java
+import java.util.*;
+
+class Solution {
+    public int fourSumCount(int[] nums1, int[] nums2, int[] nums3, int[] nums4) {
+        Map<Integer,Integer> cnt = new HashMap<>();
+
+        for(int i = 0; i < nums1.length; i ++) {
+            for(int j = 0; j < nums2.length; j ++) {
+                int t = nums1[i] + nums2[j];
+                cnt.merge(t, 1, Integer::sum);
+            }
+        }
+
+        int ans = 0;
+
+        for(int i = 0; i < nums3.length; i ++) {
+            for(int j = 0; j < nums4.length; j ++) {
+                int t = nums3[i] + nums4[j];
+                ans += cnt.getOrDefault(-t, 0);        
+            }
+        }
+        
+        return ans;
+    }
+}
+```
+
+## [383. 赎金信](https://leetcode.cn/problems/ransom-note/)
+
+比较两个字符串的字母的出现次数
+
+```java
+class Solution {
+    public boolean canConstruct(String ransomNote, String magazine) {
+        int[] cnt = new int[26];
+
+        for(var x : magazine.toCharArray()) {
+            cnt[x - 'a'] ++;
+        }
+
+        for(var x : ransomNote.toCharArray()) {
+            cnt[x - 'a'] --;
+            if(cnt[x - 'a'] < 0) {
+                return false;
+            }
+        }
+
+        return true;
+    }
+}
+```
+
