--- a/LeetCode刷题/代码随想录/哈希表.md
+++ b/LeetCode刷题/代码随想录/哈希表.md
@@ -370,3 +370,45 @@ class Solution {
 }
 ```
 
+
+
+## [18. 四数之和](https://leetcode.cn/problems/4sum/)
+
+这道题和三数之和是一样的，我们首先确定一个数，剩下的三个数套用三数之和的做法就可以了。
+
+```java
+import java.util.*;
+
+class Solution {
+    public List<List<Integer>> fourSum(int[] nums, int target) {
+        Arrays.sort(nums);
+        
+        List<List<Integer>> ans = new ArrayList<>();
+
+        for(int i = 0; i < nums.length; i ++) {
+            for(int j = i + 1; j < nums.length; j ++) {
+                int l = j + 1, r = nums.length - 1;
+                while(l < r) {
+                    long sum = (long)nums[i] + nums[j] + nums[l] + nums[r];
+                    if(sum == target) {
+                        ans.add(new ArrayList<>(Arrays.asList(nums[i], nums[j], nums[l], nums[r])));
+                        l ++;
+                        r --;
+                        while(l < r && nums[l] == nums[l - 1]) l ++;
+                        while(l < r && nums[r] == nums[r + 1]) r --;
+                    } else if(sum > target) {
+                        r --;
+                    } else {
+                        l ++;
+                    }
+                }
+                while(j + 1 < nums.length && nums[j + 1] == nums[j]) j ++;
+            }
+            while(i + 1 < nums.length && nums[i + 1] == nums[i]) i ++;
+        }
+        
+        return ans;
+    }
+}
+```
+
