--- a/LeetCode刷题/代码随想录/字符串.md
+++ b/LeetCode刷题/代码随想录/字符串.md
@@ -178,3 +178,128 @@ class Solution {
 }
 ```
 
+## [55. 右旋字符串](https://kamacoder.com/problempage.php?pid=1065)
+
+借助额外的空间，先把后半段放一个StringBuilder里面，然后再把前半段放进去，最后转化为String
+
+```java
+import java.util.*;
+import java.io.*;
+
+public class Main {
+    public static void main(String[] args){
+        Scanner sc = new Scanner(System.in);
+        
+        int k = sc.nextInt();
+        
+        sc.nextLine();
+        String str = sc.nextLine();
+        
+        
+        StringBuilder sb = new StringBuilder();
+        
+        for(int i = str.length() - k; i < str.length(); i ++) {
+            sb.append(str.charAt(i));
+        }
+        
+        for(int i = 0; i < str.length() - k; i ++) {
+            sb.append(str.charAt(i));
+        }
+        
+        System.out.println(sb.toString());
+    }
+}
+```
+
+如果给的是一个char[] 数组，那么Java就可以不用借助额外的空间。首先反转整个字符串，然后把前 $k$ 个字符反转，再将剩余的字符反转，得到的就是右旋字符串。
+
+```java
+import java.util.*;
+import java.io.*;
+
+public class Main {
+    public static void main(String[] args){
+        Scanner sc = new Scanner(System.in);
+        
+        int k = sc.nextInt();
+        
+        sc.nextLine();
+        String str = sc.nextLine();
+        
+        char[] charStr = str.toCharArray();
+        
+        reverseStr(charStr, 0, str.length() - 1);
+        
+        reverseStr(charStr, 0, k - 1);
+        
+        reverseStr(charStr, k, str.length() - 1);
+        
+        System.out.println(new String(charStr));
+    }
+    
+    private static void reverseStr(char[] s, int l, int r) {
+        while(l < r){
+            char t = s[l];
+            s[l] = s[r];
+            s[r] = t;
+            l ++;
+            r --;
+        } 
+    }
+}
+```
+
+## [28. 找出字符串中第一个匹配项的下标](https://leetcode.cn/problems/find-the-index-of-the-first-occurrence-in-a-string/)
+
+KMP 算法
+
+```java
+class Solution {
+    public int strStr(String haystack, String needle) {
+        int n = needle.length();
+        int[] next = new int[n];
+        next[0] = -1;
+
+        for(int i = 1, j = -1; i < n; i ++) {
+            while(j != -1 && needle.charAt(j + 1) != needle.charAt(i)) j = next[j];
+            if(needle.charAt(j + 1) == needle.charAt(i)) j ++;
+            next[i] = j;
+        }
+
+        for(int i = 0, j = -1; i < haystack.length(); i ++) {
+            while(j != -1 && needle.charAt(j + 1) != haystack.charAt(i)) j = next[j];
+            if(needle.charAt(j + 1) == haystack.charAt(i)) j ++;
+            if(j == n - 1) {
+                return i - n + 1;
+            }
+        }
+        return -1;
+    }
+}
+```
+
+## [459. 重复的子字符串](https://leetcode.cn/problems/repeated-substring-pattern/)
+
+如果一个字符串存在循环节，那么这个循环节的长度就是 n - next[n - 1] - 1
+
+```java
+class Solution {
+    public boolean repeatedSubstringPattern(String s) {
+        int n = s.length();
+
+        int[] next = new int[n];
+        next[0] = -1;
+
+        for(int i = 1, j = -1; i < n; i ++) {
+            while(j != -1 && s.charAt(j + 1) != s.charAt(i)) j = next[j];
+            if(s.charAt(j + 1) == s.charAt(i)) j ++;
+            next[i] = j;
+        }
+
+        int k = n - next[n - 1] - 1;
+        
+        return n % k == 0 && k != n;
+    }
+}
+```
+
